# cast-clone

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml
cast-clone-backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.mcp  alembic.ini  pyproject.toml
cast-clone-backend/app/: config.py  db_init.py  main.py
cast-clone-backend/app/ai/: __init__.py  chat.py  summaries.py  tool_definitions.py  tools.py  usage_logging.py
cast-clone-backend/app/api/: __init__.py  activity.py  ai_config.py  ai_usage.py  analysis.py  analysis_views.py  annotations.py  api_keys.py  auth.py  chat.py  connectors.py  dependencies.py  email.py  export.py  git_config.py  graph.py  graph_views.py  health.py  license.py  projects.py  pull_requests.py  repositories.py  saved_views.py  summaries.py  system.py  tags.py  users.py  webhooks.py  websocket.py
cast-clone-backend/app/git/: __init__.py  base.py  bitbucket.py  diff_parser.py  gitea.py  github.py  gitlab.py
cast-clone-backend/app/mcp/: __init__.py  auth.py  auth_middleware.py  server.py
cast-clone-backend/app/models/: __init__.py  context.py  db.py  enums.py  graph.py  manifest.py
cast-clone-backend/app/orchestrator/: __init__.py  pipeline.py  progress.py  subprocess_utils.py
cast-clone-backend/app/pr_analysis/: __init__.py  analyzer.py  comment_formatter.py  commenter.py  diff_mapper.py  drift_detector.py  impact_aggregator.py  models.py  risk_scorer.py
cast-clone-backend/app/schemas/: __init__.py  activity.py  ai_usage.py  analysis.py  analysis_views.py  annotations.py  api_keys.py  auth.py  chat.py  connectors.py  export.py  git_config.py  graph.py  graph_views.py  projects.py  pull_requests.py  repositories.py  saved_views.py  summaries.py  webhooks.py
cast-clone-backend/app/services/: __init__.py  activity.py  ai_provider.py  auth.py  branch_manager.py  clone.py  crypto.py  deployment.py  email.py  license.py  loc_tracking.py  loc_usage.py  neo4j.py  postgres.py  rate_limit.py  redis.py
cast-clone-backend/app/stages/: __init__.py  dependencies.py  discovery.py  enricher.py  gds_enricher.py  linker.py  transactions.py  writer.py
cast-clone-backend/docs/: 00-PROJECT-OVERVIEW.md  01-PHASE-1-CORE-ENGINE.md  02-PHASE-2-VISUALIZATION.md  04-PHASE-4-COLLABORATION.md  04a-PHASE-4A-FRONTEND-DESIGN-GITCONNECTOR-REPO-ONBOARDING.MD  05-PHASE-5-AI-INTEGRATION.md  05a-PHASE-5A-PR-IMPACT-ANALYSIS.md  07-ANALYSIS-ORCHESTRATOR.md  08-FRAMEWORK-PLUGINS.md  09-NEO4J-SCHEMA.md  11-SCIP-TOOLCHAIN.md  12-ARCHITECTURE-VIEW.md  13-DOT-NET-PLUGINS-RESEARCH
cast-clone-backend/migrations/: env.py
cast-clone-backend/migrations/versions/: 2a49029d4469_add_stage_progress_to_analysis_runs.py  516b8152252f_create_deployment_table.py  566c6d70dfeb_add_total_loc_to_analysis_runs.py  a1_create_email_config.py  a2_create_sent_email.py  c1_create_repository_loc_tracking.py  d1_add_trace_chat_and_summary_run.py  e1_add_subprocess_logs_to_analysis_runs.py
cast-clone-backend/scripts/: dedupe_neo4j_nodes.py  m3_e2e_smoke.py  run_e2e_full_petclinic.py  run_e2e_test.py
cast-clone-backend/tests/: conftest.py
cast-clone-backend/tests/e2e/: test_python_full_stack.py
cast-clone-backend/tests/integration/: conftest.py  test_analysis_cancel.py  test_dedupe_migration.py  test_email_api.py  test_idor_protection.py  test_neo4j_roundtrip.py  test_pipeline_e2e.py  test_python_m1_pipeline.py  test_python_m1_scip.py  test_python_m2_plugins.py  test_python_m3_pipeline.py  test_python_m4_pipeline.py  test_query_caps.py  test_rate_limit.py
cast-clone-backend/tests/unit/: conftest.py  helpers.py  test_activity_api.py  test_activity_model.py  test_activity_service.py  test_ai_pipeline.py  test_ai_report_types.py  test_ai_subagents.py  test_ai_supervisor.py  test_ai_tools.py  test_ai_triage.py  (+137 more)
(+449 files in other folders)
