[project]
name = "codelens-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "neo4j",
    "redis[hiredis]",
    "boto3",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-c-sharp>=0.23.1",
    "sqlglot>=29.0.1",
    "structlog>=24.0.0",
    "protobuf>=5.0",
    "aiofiles>=25.1.0",
    "graphdatascience>=1.20",
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    "anthropic[bedrock]>=0.40",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.0.0",
    "httpx",
    "testcontainers>=4.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services (Docker)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
